fixed contact padding on mobile phones

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -68,6 +68,7 @@
   #ibex-page .contact-section {
     padding-inline: 16px;
     margin-top: 100px;
+    padding-bottom: 0 !important;
   }
 }
 
@@ -119,6 +120,7 @@
   #yak-page .contact-section {
     padding-inline: 16px;
     margin-top: 100px;
+    padding-bottom: 0 !important;
   }
 }
 
@@ -144,6 +146,7 @@
   #brukey-page .contact-section {
     padding-inline: 16px;
     margin-top: 100px;
+    padding-bottom: 0 !important;
   }
 }
 
@@ -169,5 +172,6 @@
   #wolf-page .contact-section {
     padding-inline: 16px;
     margin-top: 100px;
+    padding-bottom: 0 !important;
   }
 }
